--- a/js/src/main/resources/index-dev.html
+++ b/js/src/main/resources/index-dev.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-    <div id="slidegame"></div>
+<div id="slidegame"><div></div></div>
 
     <!--suppress HtmlUnknownTarget -->
     <script type="text/javascript" src="../scalajs-slidegame-fastopt.js"></script>
